<resources>
    <string name="app_name">DoctorFit</string>
    <string name="database_name">ec.edu.epn.doctorfit.sqlite.db</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="lblBienvenida">Bienvenido</string>
    <string name="lblNombre">¿Cómo te llamas?</string>
    <string name="btningresar">Ingresar</string>
    <string name="lblNacimiento">¿Cuándo naciste?</string>
    <string name="lblSexo">Selecciona tu sexo</string>
    <string name="lblAlturaPeso">¿Cuál es tu peso y altura?</string>
    <string name="lblCinturaCadera">¿Cuáles son tus medidas?</string>
    <string name="lblContextura">Selecciona tu contextura</string>
    <string name="lblPesoIdeal">¿Cuánto te gustaría pesar?</string>
    <string name="lblRutina">Describe tu rutina diaria</string>
    <string name="lblUsuarioNuevo">¿Ya tienes tu plan?</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">¿Eres nuevo? Elije tu objetivo:</string>


    <!--ETIQUETAS DE TEXTVIEW TABLA USUARIO-->
    <string name="lblNombreUsuario">Nombre :</string>
    <string name="lblGeneroUsuario">Cúal es tu género?: </string>
    <string name="lblEdadUsuario">Edad: </string>
    <string name="lblEstaturaUsuario">Estatura:</string>
    <string name="lblCm">cm</string>
    <string name="lblfechaNacimiento">Fecha de Nacimiento: </string>
    <string name="lblPesoActual">¿Cuánto pesas actualmente?:</string>
    <string name="lblPesoDeseado">¿Cuál es tu peso ideal?:</string>
    <string name="lblUnidadPeso">kg:</string>
    <string name="lblMenu">Menú</string>
    <string name="lblConsejoDelDia">Consejo del dia:</string>
    <string name="lblActividadFisica">Activida Física diaria?</string>
    <string name="lblAnios">años </string>
    <string name="lblDietaActual">Cual es tu dieta actual? </string>


    <!--TEXTO DE BOTONES-->

    <string name="btnCrear">CREAR</string>
    <string name="btnCancelar">CANCELAR</string>
    <string name="btnMasculino">MASCULINO</string>
    <string name="btnFemenino">FEMENINO</string>
    <string name="btnPerderPeso">Pierde peso de forma sana \n reduciendo calorías</string>
    <string name="btnMantenerPeso">Mantén tu peso \n disfrutando de una dieta sana</string>
    <string name="btnGanarPeso">Gana peso de forma sana \n ganando masa muscular</string>
    <string name="btnIngresarUsuario">Crear Plan</string>
    <string name="btnSigueinte">Siguiente</string>
    <string name="btnNoMuyActivo">NO MUY ACTIVO</string>
    <string name="btnMedianamenteActivo">MEDIANAMENTE ACTIVO</string>
    <string name="btnActivo">ACTIVO</string>
    <string name="btnMuyActivo">MUY ACTIVO</string>
    <string name="btnDietaBalanceada">DIETA BALANCEADA</string>
    <string name="btnComidaChatarra">COMIDA CHATARRA</string>


</resources>
