<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.ProgresoUsuario"
    android:orientation="vertical"
    android:background="@drawable/fondo_doctorfit"

    >

    <!-- TODO: Update blank fragment layout -->

    <TextView
<<<<<<< HEAD
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center_horizontal"
        android:textSize="6mm"
        android:textColor="#000000" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        android:layout_gravity="center_horizontal"
        android:textSize="4mm"
        />
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
  android:layout_weight="0.92">


    <Button
        android:layout_width="251dp"
        android:layout_height="84dp"
        android:text="@string/btnPerderPeso"
        android:layout_gravity="center_horizontal|top" />

    <Button
        android:layout_width="251dp"
        android:layout_height="84dp"
        android:text="@string/btnGanarPeso"
        android:layout_gravity="center" />

    <Button
        android:layout_width="251dp"
        android:layout_height="84dp"
        android:text="@string/btnMantenerPeso"
        android:layout_gravity="center_horizontal|bottom" />
=======
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="PROGRESO" />
>>>>>>> 543927b826c4bc392530fc03e3bffec2340ff6c1

</FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">
            </FrameLayout>






</LinearLayout>
