<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_doctorfit"
    android:orientation="vertical"
    tools:context="layout.RegistroUsuario"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:textSize="3mm"
        android:text="@string/lblGeneroUsuario" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnFemenino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#c9fffefe"
            android:text="@string/btnFemenino" />

        <Button
            android:id="@+id/btnMaculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#c9fffefe"
            android:text="@string/btnMasculino" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblNombreUsuario"
        android:textColor="#000000"
        android:textSize="3mm"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/editTextNombreUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblEstaturaUsuario"
        android:textColor="#000000"
        android:textSize="3mm"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">


        <!--<EditText-->
            <!--android:id="@+id/editTextEstaturaUsuario"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center" />-->

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#c9fffefe"
            android:layout_gravity="center"></NumberPicker>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="#000000"
            android:textSize="3mm"
            android:text="@string/lblCm" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblfechaNacimiento"
        android:textColor="#000000"
        android:textSize="3mm"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnFechaNacimientoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#c9fffefe"
        android:text="-- / -- / ----"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabContinuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:background="#c9fffefe"
        android:src="@drawable/ic_continuar"
        />


</LinearLayout>
