<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="#ef0909"
    android:orientation="vertical"
    tools:context="layout.ActividadFisicaDiaria">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?android:attr/selectableItemBackground"

        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/lblActividadFisica"
        android:textColor="#000000"
        android:textSize="3mm"



        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?android:attr/selectableItemBackground"

        />

    <Button
        android:id="@+id/btnNoMuyActivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#c9fffefe"
        android:text="@string/btnNoMuyActivo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?android:attr/selectableItemBackground"

        />

    <Button
        android:id="@+id/btnMedianamenteActivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#c9fffefe"
        android:text="@string/btnMedianamenteActivo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?android:attr/selectableItemBackground"

        />

    <Button
        android:id="@+id/btnActivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#c9fffefe"
        android:text="@string/btnActivo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?android:attr/selectableItemBackground"

        />

    <Button
        android:id="@+id/btnMuyActivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#c9fffefe"
        android:text="@string/btnMuyActivo" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabContinuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:background="#c9fffefe"
        android:onClick="mostrarSiguienteInterfaz"
        android:src="@drawable/ic_continuar" />
</LinearLayout>
