<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/peso_deseado"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="layout.ProgresoUsuario">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.31">

        <TextView
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lblPesoActual"
            android:textColor="#000000"
            android:textSize="3mm" />

        <EditText
            android:id="@+id/txtPesoActual"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:text="@string/lblUnidadPeso"
            android:textColor="#000000"
            android:textSize="3mm" />

    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.31">

        <TextView
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lblPesoDeseado"
            android:textColor="#000000"
            android:textSize="3mm" />

        <EditText
            android:id="@+id/txtPesoIdeal"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:text="@string/lblUnidadPeso"
            android:textColor="#000000"
            android:textSize="3mm" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_weight="0.14">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:text="@string/btnSigueinte" />
    </FrameLayout>

</LinearLayout>
