<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="layout.ProgresoUsuario"

    >

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
<<<<<<< HEAD
        android:textSize="4mm"
        />
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
  android:layout_weight="0.92">


    <Button
        android:id="@+id/btnObjetivoPerderPeso"
        android:layout_width="251dp"
        android:layout_height="70dp"
        android:text="@string/btnPerderPeso"
        android:layout_gravity="center_horizontal|top"
        android:background="#c9fffefe" />

    <Button
        android:id="@+id/btnObjetivoGanarPeso"
        android:layout_width="251dp"
        android:layout_height="66dp"
        android:text="@string/btnGanarPeso"
        android:layout_gravity="center"
        android:background="#c9fffefe" />

    <Button
        android:id="@+id/btnObjetivoMantenerPeso"
        android:layout_width="251dp"
        android:layout_height="71dp"
        android:text="@string/btnMantenerPeso"
        android:layout_gravity="center_horizontal|bottom"
        android:background="#c9fffefe" />
        />


</FrameLayout>
=======
        android:text="@string/hello_blank_fragment"
        android:textSize="4mm" />
>>>>>>> 97f94585be2837ecb8ab0e762bc63067f4804059

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.92">


        <Button
            android:layout_width="251dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal|top"
            android:background="#c9fffefe"
            android:text="@string/btnPerderPeso" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground" />

        <Button
            android:layout_width="251dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:background="#c9fffefe"
            android:text="@string/btnGanarPeso" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground" />

        <Button
            android:layout_width="251dp"
            android:layout_height="71dp"
            android:layout_gravity="center_horizontal|bottom"
            android:background="#c9fffefe"
            android:text="@string/btnMantenerPeso" />
        />


    </FrameLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabContinuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:background="#c9fffefe"
        android:src="@drawable/ic_continuar" />


</LinearLayout>
